# FastBank-API

./: .gitignore  README.md  auth.py  database.py  main.py  models.py  pyproject.toml  requirements.txt  rotas.py
